docs: html file add more information

--- a/index.html
+++ b/index.html
@@ -36,7 +36,46 @@
                             <br>The current goal is to improve my knowledge and have a good experience.
                         </p>
 
-                        
+                        <h2 class = "personal-education">Education</h2>
+                        <p class = "personal-education-text">
+                            <a class ="education-university" href = "https://www.grsu.by/"> <b>Yanka Kupala State Universite of grodno</b> </a>
+                            <br> <i>Faculty of engineering and construction</i>
+                            <br> Degree: Bachelor
+                            <br> Speciality: Construction engineer
+                            <br> Graduation year: 2019
+                        </p>
+
+                        <h2 class = "personal-workexperience">Employment</h2>
+                        <p class = "personal-workexperience-text">
+                            <a class ="work-place" href = "https://www.azot.by/"> <b>JSC Grodno Azot, Republic of Belarus</b> </a>
+                            - Construction engine (05.09.2019 - Present)
+                        </p>
+
+                        <h2 class = "personal-skills">Skills</h2>
+                        <ul class = "personal-skills-text">
+                            <li>Programming languages:</li>
+                                <ul>
+                                    <li>Javascript (2/5)</li>
+                                    <li>Python (3/5)</li>
+                                </ul>
+                            <li>Web technologies:</li>
+                            <ul>
+                                <li>HTML (2/5)</li>
+                                <li>SCC (2/5)</li>
+                            </ul>
+                            <li>Tools and programms</li>
+                            <ul>
+                                <li>Visual Studio Code </li>
+                                <li>Sublime Text 3 </li>
+                                <li>Photoshop </li>
+                            </ul>
+                            <li>Languages</li>
+                            <ul>
+                                <li>English - A2 </li>
+                                <li>German - B2 (fluent, written and spoken) </li>
+                                <li>Russian - native language </li>
+                            </ul>
+                        </ul>
                     </div>             
                 </section> 
             </main>   
