--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>HTML, CSS & Git Basics - Svintsitski A.</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="style.css">
+    </style>
+    
 </head>
 
-<body class = >
+<body class = general>
             <header class="header">
                 <figure class="header-photo">
                     <img class="header-photo_download" src="" alt="Waiting...">
