feat: add image folder

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     
 </head>
 
-<body class = general>
+<body class = "general">
+    <div class = "parent">
             <header class="header">
                 <figure class="header-photo">
                     <img class="header-photo_download" src="" alt="Waiting...">
@@ -80,7 +81,9 @@
                         </ul>
                     </div>             
                 </section> 
-            </main>   
+            </main>  
+
+    </div> 
      
 </body>
 </html>
