feat:add new styles css

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     
 </head>
 
-<body class = "general">
+<body >
     <div class = "parent">
             <header class="header">
                 <figure class="header-photo">
-                    <img class="header-photo_download" src="" alt="Waiting...">
+                    <img class="header-photo_download" src="image/4х5.jpg" alt="Waiting...">
                 </figure>
                 <div class="header-info">
                     <h1 class="text header-name">Aliaksandr Svintsitski</h1>
