fix:problem with validator w3

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <title>HTML, CSS & Git Basics - Svintsitski A.</title>
     <link rel="stylesheet" href="style.css">
-    </style>
     
 </head>
 
@@ -56,28 +55,32 @@
 
                         <h2 class = "personal-skills">Skills</h2>
                         <ul class = "personal-skills-text">
-                            <li>Programming languages:</li>
+                            <li>Programming languages:
                                 <ul>
                                     <li>Javascript (2/5)</li>
                                     <li>Python (3/5)</li>
                                 </ul>
-                            <li>Web technologies:</li>
-                            <ul>
-                                <li>HTML (2/5)</li>
-                                <li>SCC (2/5)</li>
-                            </ul>
-                            <li>Tools and programms</li>
-                            <ul>
-                                <li>Visual Studio Code </li>
-                                <li>Sublime Text 3 </li>
-                                <li>Photoshop </li>
-                            </ul>
-                            <li>Languages</li>
-                            <ul>
-                                <li>English - A2 </li>
-                                <li>German - B2 (fluent, written and spoken) </li>
-                                <li>Russian - native language </li>
-                            </ul>
+                            </li>
+                            <li>Web technologies:
+                                <ul>
+                                    <li>HTML (2/5)</li>
+                                    <li>SCC (2/5)</li>
+                                </ul>
+                            </li>
+                            <li>Tools and programms
+                                <ul>
+                                    <li>Visual Studio Code </li>
+                                    <li>Sublime Text 3 </li>
+                                    <li>Photoshop </li>
+                                </ul>
+                            </li>
+                            <li>Languages
+                                <ul>
+                                    <li>English - A2 </li>
+                                    <li>German - B2 (fluent, written and spoken) </li>
+                                    <li>Russian - native language </li>
+                                </ul>
+                            </li>
                         </ul>
                     </div>             
                 </section> 
