feat:add new images,links and styles

--- a/index.html
+++ b/index.html
@@ -85,7 +85,21 @@
                     </div>             
                 </section> 
             </main>  
-
+            <footer>
+                <table>
+                    <tr>
+                        <th>
+                            <a class = "image-rsschool" href = "https://rs.school/js/"><img  src="image/rs_school_js.svg" alt="Waiting..." ></a>
+                        </th>
+                        <th class = "year-of-creation"> © 2021 All rights reserved
+                        </th>
+                        <th> 
+                            <a class = "image-github" href = "https://github.com/"><img  src="image/Githab.jpg" alt="Waiting..." ></a>
+                        </th>
+                    </tr>
+                </table>
+                
+            </footer>
     </div> 
      
 </body>
