--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta charset="UTF-8">
     <title>HTML, CSS & Git Basics - Svintsitski A.</title>
     <link rel="stylesheet" href="style.css">
-    
-    
 </head>
 
 <body >
@@ -16,7 +14,11 @@
                     <img class="header-photo_download" src="image/4х5.jpg" alt="Waiting...">
                 </div>
                 <div class="header-info">
-                    <h1 class="text header-name">Aliaksandr Svintsitski</h1>
+                    <h1 class="text header-name"></h1>
+                    <h2>Aliaksandr Svintsitski
+                        <br>RS-School
+                        <br>CV-2021q3
+                    </h2>
                 </div>
                 <div class="menu">
                     <input type="checkbox" id="check-menu">
@@ -37,9 +39,8 @@
             </header>
 
             <main class="main">
-                <section class="personal">  
-                    <div class="personal-info">
-                        <h2 class ="personal-details"> Personal details </h2>
+                <section class="personal-details">  
+                        <h2> Personal details </h2>
                             <ul>
                                 <li>Phone: +375298687616</li>
                                 <li>E-Mail: svincickiaa@gmail.com</li>
@@ -47,16 +48,18 @@
                                 <li>Github : <a href = "https://github.com/Alexander-gMa">Alexander-gMa</a>
                                 </li>
                             </ul>
-
-                        <h2 class = "personal-summary"> Summary </h2>
+                </section>
+                <section class="personal-summary">  
+                        <h2> Summary </h2>
                         <p class = "personal-summary-text">
                             I am Aliaksandr Svintsitski, graduated from full-time studies at the Yanka Kupala State University of grodno in 2019.
                             <br>For two years I worked as an engineer of industrial and civil construction in Belarus.
                             <br>All my life I wonted to be a programmer.  
                             <br>The current goal is to improve my knowledge and have a good experience.
                         </p>
-
-                        <h2 class = "personal-education">Education</h2>
+                </section>
+                <section class="personal-education">  
+                        <h2 >Education</h2>
                         <p class = "personal-education-text">
                             <a class ="education-university" href = "https://www.grsu.by/"> <b>Yanka Kupala State Universite of grodno</b> </a>
                             <br> <i>Faculty of engineering and construction</i>
@@ -64,14 +67,16 @@
                             <br> Speciality: Construction engineer
                             <br> Graduation year: 2019
                         </p>
-
+                </section>
+                <section class="personal-workexperience"> 
                         <h2 class = "personal-workexperience">Employment</h2>
                         <p class = "personal-workexperience-text">
                             <a class ="work-place" href = "https://www.azot.by/"> <b>JSC Grodno Azot, Republic of Belarus</b> </a>
                             - Construction engine (05.09.2019 - Present)
                         </p>
-
-                        <h2 class = "personal-skills">Skills</h2>
+                </section>
+                <section class="personal-skills">       
+                        <h2 >Skills</h2>
                         <ul class = "personal-skills-text">
                             <li>Programming languages:
                                 <ul>
@@ -100,7 +105,6 @@
                                 </ul>
                             </li>
                         </ul>
-                    </div>             
                 </section> 
             </main>  
 
