feat: add left - right section

--- a/index.html
+++ b/index.html
@@ -50,16 +50,25 @@
                             </ul>
                 </section>
                 <section class="personal-summary">  
+                    <div class="content-left">
                         <h2> Summary </h2>
-                        <p class = "personal-summary-text">
-                            I am Aliaksandr Svintsitski, graduated from full-time studies at the Yanka Kupala State University of grodno in 2019.
-                            <br>For two years I worked as an engineer of industrial and civil construction in Belarus.
-                            <br>All my life I wonted to be a programmer.  
-                            <br>The current goal is to improve my knowledge and have a good experience.
-                        </p>
+                    </div>
+                    <div class="content-right">
+                        <article>
+                            <p class = "personal-summary-text">
+                                I am Aliaksandr Svintsitski, graduated from full-time studies at the Yanka Kupala State University of grodno in 2019.
+                                <br>For two years I worked as an engineer of industrial and civil construction in Belarus.
+                                <br>All my life I wonted to be a programmer.  
+                                <br>The current goal is to improve my knowledge and have a good experience.
+                            </p>
+                        </article>
+                    </div>
                 </section>
                 <section class="personal-education">  
+                    <div class="content-left">
                         <h2 >Education</h2>
+                    </div>
+                    <div class="content-right">
                         <p class = "personal-education-text">
                             <a class ="education-university" href = "https://www.grsu.by/"> <b>Yanka Kupala State Universite of grodno</b> </a>
                             <br> <i>Faculty of engineering and construction</i>
@@ -67,16 +76,24 @@
                             <br> Speciality: Construction engineer
                             <br> Graduation year: 2019
                         </p>
+                    </div>
                 </section>
                 <section class="personal-workexperience"> 
+                    <div class="content-left">
                         <h2 class = "personal-workexperience">Employment</h2>
+                    </div>
+                    <div class="content-right">
                         <p class = "personal-workexperience-text">
                             <a class ="work-place" href = "https://www.azot.by/"> <b>JSC Grodno Azot, Republic of Belarus</b> </a>
                             - Construction engine (05.09.2019 - Present)
                         </p>
+                    </div>
                 </section>
-                <section class="personal-skills">       
+                <section class="personal-skills">   
+                    <div class="content-left">    
                         <h2 >Skills</h2>
+                    </div>
+                    <div class="content-right">
                         <ul class = "personal-skills-text">
                             <li>Programming languages:
                                 <ul>
@@ -105,6 +122,7 @@
                                 </ul>
                             </li>
                         </ul>
+                    </div>
                 </section> 
             </main>  
 
