feat:add new css styles

--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
             </header>
 
             <main class="main">
-                <section class="personal-details">  
+                <section class="personal-details cv-section">  
+                    <div class="content-left">
                         <h2> Personal details </h2>
+                    </div>
+                    <div class="content-right">
                             <ul>
                                 <li>Phone: +375298687616</li>
                                 <li>E-Mail: svincickiaa@gmail.com</li>
@@ -48,8 +51,9 @@
                                 <li>Github : <a href = "https://github.com/Alexander-gMa">Alexander-gMa</a>
                                 </li>
                             </ul>
+                    </div>
                 </section>
-                <section class="personal-summary">  
+                <section class="personal-summary cv-section">  
                     <div class="content-left">
                         <h2> Summary </h2>
                     </div>
@@ -64,7 +68,7 @@
                         </article>
                     </div>
                 </section>
-                <section class="personal-education">  
+                <section class="personal-education cv-section">  
                     <div class="content-left">
                         <h2 >Education</h2>
                     </div>
@@ -78,18 +82,18 @@
                         </p>
                     </div>
                 </section>
-                <section class="personal-workexperience"> 
+                <section class="personal-workexperience cv-section"> 
                     <div class="content-left">
                         <h2 class = "personal-workexperience">Employment</h2>
                     </div>
                     <div class="content-right">
                         <p class = "personal-workexperience-text">
                             <a class ="work-place" href = "https://www.azot.by/"> <b>JSC Grodno Azot, Republic of Belarus</b> </a>
-                            - Construction engine (05.09.2019 - Present)
+                            - Construction engineer (05.09.2019 - Present)
                         </p>
                     </div>
                 </section>
-                <section class="personal-skills">   
+                <section class="personal-skills cv-section">   
                     <div class="content-left">    
                         <h2 >Skills</h2>
                     </div>
@@ -98,7 +102,8 @@
                             <li>Programming languages:
                                 <ul>
                                     <li>Javascript (2/5)</li>
-                                    <li>Python (3/5)</li>
+                                    <li >Python (3/5) </li>
+                                
                                 </ul>
                             </li>
                             <li>Web technologies:
