--- a/index.html
+++ b/index.html
@@ -14,11 +14,8 @@
                     <img class="header-photo_download" src="image/4х5.jpg" alt="Waiting...">
                 </div>
                 <div class="header-info">
-                    <h1 class="text header-name"></h1>
-                    <h2>Aliaksandr Svintsitski
-                        <br>RS-School
-                        <br>CV-2021q3
-                    </h2>
+                    <h1 class="text header-name"> Aliaksandr Svintsitski</h1>
+                        <h2><br>RS-School-2021q3</h2>
                 </div>
                 <div class="menu">
                     <input type="checkbox" id="check-menu">
