feat:fix some problem with structure html

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
                     <div class="burger-line third"></div>
                     <div class="burger-line fourth"></div>
                     <nav class="main-menu">
-                        <a class="menu-link" href="https://www.grsu.by/">Personal-details</a>
-                        <a class="menu-link" href="https://www.grsu.by/">Summary</a>
-                        <a class="menu-link" href="https://www.grsu.by/">Education</a>
-                        <a class="menu-link" href="https://www.grsu.by/">Employment</a>
-                        <a class="menu-link" href="https://www.grsu.by/">Skills</a>
+                        <a class="menu-link" href="#Personal details">Personal-details</a>
+                        <a class="menu-link" href="#Summary">Summary</a>
+                        <a class="menu-link" href="#Education">Education</a>
+                        <a class="menu-link" href="#Employment">Employment</a>
+                        <a class="menu-link" href="#Skills">Skills</a>
                     </nav>
                 </div>
             </header>
@@ -38,7 +38,7 @@
             <main class="main">
                 <section class="personal-details cv-section">  
                     <div class="content-left">
-                        <h2 > Personal details </h2>
+                        <h2 id="Personal details"> Personal details </h2>
                     </div>
                     <div class="content-right">
                             <ul>
@@ -53,7 +53,7 @@
                 </section>
                 <section class="personal-summary cv-section">  
                     <div class="content-left">
-                        <h2> Summary </h2>
+                        <h2 id="Summary"> Summary </h2>
                     </div>
                     <div class="content-right">
                         <article>
@@ -68,11 +68,11 @@
                 </section>
                 <section class="personal-education cv-section">  
                     <div class="content-left">
-                        <h2 >Education</h2>
+                        <h2 id="Education">Education</h2>
                     </div>
                     <div class="content-right">
                         <p class = "personal-education-text">
-                            <a class ="education-university" href = "https://www.grsu.by/"> <b>Yanka Kupala State Universite of grodno<br></b> </a>
+                            <a class ="education-university" href = "https://www.grsu.by/"> Yanka Kupala State Universite of grodno<br></a>
                             <br> <i>Faculty of engineering and construction</i>
                             <br> Degree: Bachelor
                             <br> Speciality: Construction engineer
@@ -82,18 +82,18 @@
                 </section>
                 <section class="personal-workexperience cv-section"> 
                     <div class="content-left">
-                        <h2 class = "personal-workexperience">Employment</h2>
+                        <h2 id="Employment">Employment</h2>
                     </div>
                     <div class="content-right">
                         <p class = "personal-workexperience-text">
-                            <a class ="work-place" href = "https://www.azot.by/"> <b>JSC Grodno Azot, Republic of Belarus<br></b> </a>
+                            <a class ="work-place" href = "https://www.azot.by/"> JSC Grodno Azot, Republic of Belarus<br> </a>
                             <br> Construction engineer - 05.09.2019 - Present
                         </p>
                     </div>
                 </section>
                 <section class="personal-skills cv-section">   
                     <div class="content-left">    
-                        <h2 >Skills</h2>
+                        <h2 id="Skills">Skills</h2>
                     </div>
                     <div class="content-right">
                         <ul class = "personal-skills-text">
@@ -129,7 +129,7 @@
                 </section> 
             </main>  
 
-            <footer>
+            <footer id="links">
               
                     
                     <a class = "image-rsschool" href = "https://rs.school/js/"><img  src="image/rs_school_js.svg" alt="Waiting..." ></a>
