--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <div class="burger-line third"></div>
                     <div class="burger-line fourth"></div>
                     <nav class="main-menu">
-                        <a class="menu-link" href="#Personal details">Personal-details</a>
+                        <a class="menu-link" href="#Personal-details">Personal-details</a>
                         <a class="menu-link" href="#Summary">Summary</a>
                         <a class="menu-link" href="#Education">Education</a>
                         <a class="menu-link" href="#Employment">Employment</a>
@@ -41,7 +41,7 @@
             <main class="main">
                 <section class="personal-details cv-section">  
                     <div class="content-left">
-                        <h2 id="Personal details"> Personal details </h2>
+                        <h2 id="Personal-details"> Personal details </h2>
                     </div>
                     <div class="content-right">
                             <ul>
@@ -171,7 +171,7 @@
                 </section> 
                 <section class="Code-Example cv-section"> 
                     <div class="content-left">
-                        <h2 id="Employment">Code-Example</h2>
+                        <h2 id="Code-Example">Code-Example</h2>
                     </div>
                     <div class="content-right">
                         <pre>
