feat:add new links

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                         <a class="menu-link" href="#Education">Education</a>
                         <a class="menu-link" href="#Employment">Employment</a>
                         <a class="menu-link" href="#Skills">Skills</a>
+                        <a class="menu-link" href="#Code-Example">Code Example</a>
                     </nav>
                 </div>
             </header>
@@ -45,9 +46,9 @@
                     </div>
                     <div class="content-right">
                             <ul>
-                                <li>Phone: +375298687616</li>
-                                <li>E-Mail: svincickiaa@gmail.com</li>
-                                <li>Skype : live:.cid.ef723b48ec013358</li>
+                                <li>Phone:<a href="phone:+375298687616">+375298687616</a> </li>
+                                <li>E-Mail:<a href="mailto:svincickiaa@gmail.com">svincickiaa@gmail.com</a></li>
+                                <li>Skype :<a href="skype:live:.cid.ef723b48ec013358">live:.cid.ef723b48ec013358</a></li>
                                 <li>Github : 
                                     <a href = "https://github.com/Alexander-gMa">Alexander-gMa</a>
                                 </li>
@@ -153,15 +154,15 @@
                                 </ul>
                             </li>
                             <li>Tools and programms
-                                <ul>
+                                <ul><br>
                                     <li>Visual Studio Code </li>
                                     <li>Sublime Text 3 </li>
-                                    <li>Photoshop </li>
+                                    <li>Photoshop </li><br>
                                 </ul>
                             </li>
                             <li>Languages
                                 <ul>
-                                    <li>English - A2 </li>
+                                    <br><li>English - A2 </li>
                                     <li>German - B2 (fluent, written and spoken) </li>
                                     <li>Russian - native language </li>
                                 </ul>
