feat: change html structure

--- a/index.html
+++ b/index.html
@@ -141,8 +141,7 @@
                                         </div>
                                     </li>
                                     <li class="skill-item">
-                                        <div class="skill-item-name1">SCC 
-                                        </div>
+                                        <div class="skill-item-name1">CSS</div>
                                         <div class="circle-container1">  
                                             <span class="circle"></span>
                                             <span class="circle"></span>
