feat:change html structure

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 <body >
     <div class = "wrapper">
             <header class="header">
-                <div class="header-photo">
+                <figure >
                     <img class="header-photo_download" src="image/4х5.jpg" alt="Waiting...">
-                </div>
+                </figure>
                 <div class="header-info">
                     <h1 class="text header-name"> Aliaksandr Svintsitski</h1>
                         <h2><br>RS-School-2021q3</h2>
@@ -42,7 +42,7 @@
             <main class="main">
                 <section class="personal-details cv-section">  
                     <div class="content-left">
-                        <h2 id="Personal-details"> Personal details </h2>
+                        <h3 id="Personal-details"> Personal details </h3>
                     </div>
                     <div class="content-right">
                             <ul>
@@ -57,7 +57,7 @@
                 </section>
                 <section class="personal-summary cv-section">  
                     <div class="content-left">
-                        <h2 id="Summary"> Summary </h2>
+                        <h3 id="Summary"> Summary </h3>
                     </div>
                     <div class="content-right">
                         <article>
@@ -72,21 +72,21 @@
                 </section>
                 <section class="personal-education cv-section">  
                     <div class="content-left">
-                        <h2 id="Education">Education</h2>
+                        <h3 id="Education">Education</h3>
                     </div>
                     <div class="content-right">
-                        <p class = "personal-education-text">
+                        <h3 class = "personal-education-text">
                             <a class ="education-university" href = "https://www.grsu.by/"> Yanka Kupala State Universite of grodno<br></a>
                             <br> <i>Faculty of engineering and construction</i>
                             <br> Degree: Bachelor
                             <br> Speciality: Construction engineer
                             <br> Graduation year: 2019
-                        </p>
+                        </h3>
                     </div>
                 </section>
                 <section class="personal-workexperience cv-section"> 
                     <div class="content-left">
-                        <h2 id="Employment">Employment</h2>
+                        <h3 id="Employment">Employment</h3>
                     </div>
                     <div class="content-right">
                         <p class = "personal-workexperience-text">
@@ -97,7 +97,7 @@
                 </section>
                 <section class="personal-skills cv-section">   
                     <div class="content-left">    
-                        <h2 id="Skills">Skills</h2>
+                        <h3 id="Skills">Skills</h3>
                     </div>
                     <div class="content-right">
                         <ul class = "personal-skills-text">
@@ -171,7 +171,7 @@
                 </section> 
                 <section class="Code-Example cv-section"> 
                     <div class="content-left">
-                        <h2 id="Code-Example">Code-Example</h2>
+                        <h3 id="Code-Example">Code-Example</h3>
                     </div>
                     <div class="content-right">
                         <pre>
